<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Please login access use to system "
        android:textSize="20dp"
        android:textColor="@color/colorDark"
        android:gravity="center"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/driver"
        android:id="@+id/BTN_Driver"
        android:textSize="20sp"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        android:id="@+id/BTN_Teacher"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parent"
        android:id="@+id/BTN_Parent"
        android:textSize="20sp"
        />

</LinearLayout>
