<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_liststd"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorBlueGray_Pastel"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:id="@+id/linear1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_student"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear3"
        android:layout_below="@id/linear1">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:backgroundTint="@color/colorBlueGray_Pastel"
            android:textColor="@color/colorWhite"
            android:text="@string/morning"
            android:id="@+id/btn_list_morning"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/evening"
            android:backgroundTint="@color/colorBlueGray_Pastel"
            android:textColor="@color/colorWhite"
            android:layout_weight="50"
            android:id="@+id/btn_list_evening"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_below="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        />

    <Button
        android:id="@+id/btnGetSelected_All"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBlueGray_Pastel"
        android:textColor="@color/colorWhite"
        android:text="คลิกเพื่อ ลงจากรถ ทั้งหมด"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>
